--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -128,39 +128,39 @@
     <Compile Include="World\Network\Realm\RealmClientParser.cs" />
     <Compile Include="World\Network\Realm\RealmClientServer.cs" />
     <Compile Include="World\Network\ServersHandler.cs" />
-    <Compile Include="World\Realm\Characters\Character.cs" />
-    <Compile Include="World\Realm\Characters\CharacterChannels.cs" />
-    <Compile Include="World\Realm\Characters\CharacterFaction.cs" />
-    <Compile Include="World\Realm\Characters\CharacterParty.cs" />
-    <Compile Include="World\Realm\Characters\CharactersManager.cs" />
-    <Compile Include="World\Realm\Characters\CharacterState.cs" />
-    <Compile Include="World\Realm\Characters\Items\Char\CharacterItem.cs" />
-    <Compile Include="World\Realm\Characters\Items\Char\CharacterSet.cs" />
-    <Compile Include="World\Realm\Characters\Items\InventaryItems.cs" />
-    <Compile Include="World\Realm\Characters\Items\ItemsHandler.cs" />
-    <Compile Include="World\Realm\Characters\NPC\NPCMap.cs" />
-    <Compile Include="World\Realm\Characters\Spells\Char\ChararcterSpell.cs" />
-    <Compile Include="World\Realm\Characters\Spells\InventarySpells.cs" />
-    <Compile Include="World\Realm\Characters\Spells\Target.cs" />
-    <Compile Include="World\Realm\Characters\Stats\AbstractStats.cs" />
-    <Compile Include="World\Realm\Characters\Stats\Stats.cs" />
-    <Compile Include="World\Realm\Effects\EffectAction.cs" />
-    <Compile Include="World\Realm\Effects\EffectItem.cs" />
-    <Compile Include="World\Realm\Effects\EffectSpell.cs" />
-    <Compile Include="World\Realm\Exchanges\Exchange.cs" />
-    <Compile Include="World\Realm\Exchanges\ExchangeItem.cs" />
-    <Compile Include="World\Realm\Exchanges\ExchangesManager.cs" />
-    <Compile Include="World\Realm\Maps\Fights\Fight.cs" />
-    <Compile Include="World\Realm\Maps\Fights\Fighter.cs" />
-    <Compile Include="World\Realm\Maps\Map.cs" />
-    <Compile Include="World\Realm\Maps\Monsters\Monster.cs" />
-    <Compile Include="World\Realm\Maps\Monsters\MonsterIA.cs" />
-    <Compile Include="World\Realm\Maps\Monsters\MonstersGroup.cs" />
-    <Compile Include="World\Realm\Maps\Pathfinding.cs" />
-    <Compile Include="World\Realm\World\Chat.cs" />
-    <Compile Include="World\Realm\World\Conditions\NPCConditions.cs" />
-    <Compile Include="World\Realm\World\Conditions\TriggerCondition.cs" />
-    <Compile Include="World\Realm\World\Save.cs" />
+    <Compile Include="World\Game\Characters\Character.cs" />
+    <Compile Include="World\Game\Characters\CharacterChannels.cs" />
+    <Compile Include="World\Game\Characters\CharacterFaction.cs" />
+    <Compile Include="World\Game\Characters\CharacterParty.cs" />
+    <Compile Include="World\Game\Characters\CharactersManager.cs" />
+    <Compile Include="World\Game\Characters\CharacterState.cs" />
+    <Compile Include="World\Game\Characters\Items\Char\CharacterItem.cs" />
+    <Compile Include="World\Game\Characters\Items\Char\CharacterSet.cs" />
+    <Compile Include="World\Game\Characters\Items\InventaryItems.cs" />
+    <Compile Include="World\Game\Characters\Items\ItemsHandler.cs" />
+    <Compile Include="World\Game\Characters\NPC\NPCMap.cs" />
+    <Compile Include="World\Game\Characters\Spells\Char\ChararcterSpell.cs" />
+    <Compile Include="World\Game\Characters\Spells\InventarySpells.cs" />
+    <Compile Include="World\Game\Characters\Spells\Target.cs" />
+    <Compile Include="World\Game\Characters\Stats\AbstractStats.cs" />
+    <Compile Include="World\Game\Characters\Stats\Stats.cs" />
+    <Compile Include="World\Game\Effects\EffectAction.cs" />
+    <Compile Include="World\Game\Effects\EffectItem.cs" />
+    <Compile Include="World\Game\Effects\EffectSpell.cs" />
+    <Compile Include="World\Game\Exchanges\Exchange.cs" />
+    <Compile Include="World\Game\Exchanges\ExchangeItem.cs" />
+    <Compile Include="World\Game\Exchanges\ExchangesManager.cs" />
+    <Compile Include="World\Game\Maps\Fights\Fight.cs" />
+    <Compile Include="World\Game\Maps\Fights\Fighter.cs" />
+    <Compile Include="World\Game\Maps\Map.cs" />
+    <Compile Include="World\Game\Maps\Monsters\Monster.cs" />
+    <Compile Include="World\Game\Maps\Monsters\MonsterIA.cs" />
+    <Compile Include="World\Game\Maps\Monsters\MonstersGroup.cs" />
+    <Compile Include="World\Game\Maps\Pathfinding.cs" />
+    <Compile Include="World\Game\World\Chat.cs" />
+    <Compile Include="World\Game\World\Conditions\NPCConditions.cs" />
+    <Compile Include="World\Game\World\Conditions\TriggerCondition.cs" />
+    <Compile Include="World\Game\World\Save.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="CHG.txt">
