Zaapis - Start of Zaaps

--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -83,15 +83,15 @@
     <Compile Include="Utilities\Basic.cs" />
     <Compile Include="Utilities\Config.cs" />
     <Compile Include="Utilities\Loggers.cs" />
-    <Compile Include="World\Entities\Requests\AuthsRequests.cs" />
-    <Compile Include="World\Entities\Requests\CharactersRequests.cs" />
-    <Compile Include="World\Entities\Requests\ItemsRequests.cs" />
-    <Compile Include="World\Entities\Requests\LevelsRequests.cs" />
-    <Compile Include="World\Entities\Requests\MapsRequests.cs" />
-    <Compile Include="World\Entities\Requests\MonstersRequests.cs" />
-    <Compile Include="World\Entities\Requests\NoPlayerCharacterRequests.cs" />
-    <Compile Include="World\Entities\Requests\SpellsRequests.cs" />
-    <Compile Include="World\Entities\Requests\TriggersRequests.cs" />
+    <Compile Include="World\Entities\Requests\Client\AuthsRequests.cs" />
+    <Compile Include="World\Entities\Requests\Client\CharactersRequests.cs" />
+    <Compile Include="World\Entities\Requests\Client\ItemsRequests.cs" />
+    <Compile Include="World\Entities\Requests\World\LevelsRequests.cs" />
+    <Compile Include="World\Entities\Requests\Maps\MapsRequests.cs" />
+    <Compile Include="World\Entities\Requests\Maps\MonstersRequests.cs" />
+    <Compile Include="World\Entities\Requests\Maps\NoPlayerCharacterRequests.cs" />
+    <Compile Include="World\Entities\Requests\Client\SpellsRequests.cs" />
+    <Compile Include="World\Entities\Requests\Maps\TriggersRequests.cs" />
     <Compile Include="World\Entities\DatabaseProvider.cs" />
     <Compile Include="World\Entities\Models\Clients\AccountModel.cs" />
     <Compile Include="World\Entities\Models\Clients\AuthClientModel.cs" />
@@ -110,9 +110,15 @@
     <Compile Include="World\Entities\Models\Spells\SpellLevelModel.cs" />
     <Compile Include="World\Entities\Models\Spells\SpellModel.cs" />
     <Compile Include="World\Entities\Models\Spells\SpellToLearn.cs" />
+    <Compile Include="World\Entities\Requests\Maps\ZaapisRequests.cs" />
+    <Compile Include="World\Entities\Requests\Maps\ZaapsRequests.cs" />
     <Compile Include="World\Game\Characters\CharacterEnemies.cs" />
     <Compile Include="World\Game\Characters\CharacterFriends.cs" />
     <Compile Include="World\Game\Exchanges\ExchangePlayer.cs" />
+    <Compile Include="World\Game\Maps\Zaapis\ZaapisManager.cs" />
+    <Compile Include="World\Game\Maps\Zaaps\Zaap.cs" />
+    <Compile Include="World\Game\Maps\Zaapis\Zaapis.cs" />
+    <Compile Include="World\Game\Maps\Zaaps\ZaapsManager.cs" />
     <Compile Include="World\Network\Auth\AuthClient.cs" />
     <Compile Include="World\Network\Auth\AuthKeys.cs" />
     <Compile Include="World\Network\Auth\AuthLinks.cs" />
