--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -197,6 +197,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Librairies\MySql.Data.dll" />
     <Content Include="Librairies\SilverSock.dll" />
+    <Content Include="README.txt" />
     <Content Include="TODO.txt" />
   </ItemGroup>
   <ItemGroup />
