Bugs Banks (Insert in the DB), MoveGold with Banks

--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -116,7 +116,7 @@
     <Compile Include="World\Entities\Requests\Maps\ZaapsRequests.cs" />
     <Compile Include="World\Game\Bank\Bank.cs" />
     <Compile Include="World\Game\Bank\BankExchange.cs" />
-    <Compile Include="World\Game\Bank\BankManager.cs" />
+    <Compile Include="World\Game\Bank\BanksManager.cs" />
     <Compile Include="World\Game\Characters\CharacterEnemies.cs" />
     <Compile Include="World\Game\Characters\CharacterFriends.cs" />
     <Compile Include="World\Game\Characters\CharacterJobs.cs" />
@@ -198,9 +198,10 @@
     <Content Include="Librairies\MySql.Data.dll" />
     <Content Include="Librairies\SilverSock.dll" />
     <Content Include="README.txt" />
-    <Content Include="TODO.txt" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Databases\Paths\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
