Review the most of the classes in the directory World (without the totaly directory Characters)

--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -147,15 +147,14 @@
     <Compile Include="World\Network\Auth\Packets\StartMaintenancePacket.cs" />
     <Compile Include="World\Network\Auth\Packets\StopMaintenancePacket.cs" />
     <Compile Include="World\Network\Realm\RealmClient.cs" />
-    <Compile Include="World\Network\Realm\RealmClientCommander.cs" />
-    <Compile Include="World\Network\Realm\RealmClientParser.cs" />
-    <Compile Include="World\Network\Realm\RealmClientServer.cs" />
+    <Compile Include="World\Network\Realm\RealmCommander.cs" />
+    <Compile Include="World\Network\Realm\RealmParser.cs" />
+    <Compile Include="World\Network\Realm\RealmServer.cs" />
     <Compile Include="World\Network\ServersHandler.cs" />
     <Compile Include="World\Game\Characters\Character.cs" />
     <Compile Include="World\Game\Characters\CharacterChannels.cs" />
     <Compile Include="World\Game\Characters\CharacterFaction.cs" />
     <Compile Include="World\Game\Characters\CharacterParty.cs" />
-    <Compile Include="World\Game\Characters\CharactersManager.cs" />
     <Compile Include="World\Game\Characters\CharacterState.cs" />
     <Compile Include="World\Game\Characters\Items\Char\CharacterItem.cs" />
     <Compile Include="World\Game\Characters\Items\Char\CharacterSet.cs" />
