Challenge (Big Thx for the fork of Persi2 and his big work !) | Rewrite of Starts (thx one more time Persi2) | Repair bug on spellTarget

--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -80,6 +80,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\Basic.cs" />
+    <Compile Include="Utilities\BooleanByte.cs" />
+    <Compile Include="Utilities\CellZone.cs" />
     <Compile Include="Utilities\Config.cs" />
     <Compile Include="Utilities\Loggers.cs" />
     <Compile Include="World\Entities\Requests\Client\AuthsRequests.cs" />
@@ -121,10 +123,25 @@
     <Compile Include="World\Game\Characters\CharacterFriends.cs" />
     <Compile Include="World\Game\Characters\CharacterJobs.cs" />
     <Compile Include="World\Game\Characters\Jobs\Job.cs" />
+    <Compile Include="World\Game\Characters\Stats\EffectEnum.cs" />
+    <Compile Include="World\Game\Characters\Stats\GenericStat.cs" />
+    <Compile Include="World\Game\Characters\Stats\GenericStats.cs" />
+    <Compile Include="World\Game\Characters\Stats\StatEnum.cs" />
+    <Compile Include="World\Game\Effects\EffectSpellTarget.cs" />
     <Compile Include="World\Game\Exchanges\ExchangePlayer.cs" />
     <Compile Include="World\Game\Guilds\Guild.cs" />
     <Compile Include="World\Game\Guilds\GuildCollector.cs" />
     <Compile Include="World\Game\Guilds\GuildMember.cs" />
+    <Compile Include="World\Game\Maps\Fights\ChallengeFight.cs" />
+    <Compile Include="World\Game\Maps\Fights\CharacterFighter.cs" />
+    <Compile Include="World\Game\Maps\Fights\Effects\BuffProcessor.cs" />
+    <Compile Include="World\Game\Maps\Fights\Effects\EffectCast.cs" />
+    <Compile Include="World\Game\Maps\Fights\Effects\EffectProcessor.cs" />
+    <Compile Include="World\Game\Maps\Fights\Fight.cs" />
+    <Compile Include="World\Game\Maps\Fights\Fighter.cs" />
+    <Compile Include="World\Game\Maps\Fights\FighterBuff.cs" />
+    <Compile Include="World\Game\Maps\Fights\FighterSpell.cs" />
+    <Compile Include="World\Game\Maps\Fights\FightTeam.cs" />
     <Compile Include="World\Game\Maps\Zaapis\ZaapisManager.cs" />
     <Compile Include="World\Game\Maps\Zaaps\Zaap.cs" />
     <Compile Include="World\Game\Maps\Zaapis\Zaapis.cs" />
@@ -164,7 +181,6 @@
     <Compile Include="World\Game\Characters\NPC\NPCMap.cs" />
     <Compile Include="World\Game\Characters\Spells\Char\ChararcterSpell.cs" />
     <Compile Include="World\Game\Characters\Spells\InventarySpells.cs" />
-    <Compile Include="World\Game\Characters\Spells\Target.cs" />
     <Compile Include="World\Game\Characters\Stats\AbstractStats.cs" />
     <Compile Include="World\Game\Characters\Stats\Stats.cs" />
     <Compile Include="World\Game\Effects\EffectAction.cs" />
@@ -173,8 +189,6 @@
     <Compile Include="World\Game\Exchanges\Exchange.cs" />
     <Compile Include="World\Game\Exchanges\ExchangeItem.cs" />
     <Compile Include="World\Game\Exchanges\ExchangesManager.cs" />
-    <Compile Include="World\Game\Maps\Fights\Fight.cs" />
-    <Compile Include="World\Game\Maps\Fights\Fighter.cs" />
     <Compile Include="World\Game\Maps\Map.cs" />
     <Compile Include="World\Game\Maps\Monsters\Monster.cs" />
     <Compile Include="World\Game\Maps\Monsters\MonsterIA.cs" />
