--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Utilities\BooleanByte.cs" />
     <Compile Include="Utilities\CellZone.cs" />
     <Compile Include="Utilities\Config.cs" />
+    <Compile Include="Utilities\Formulas.cs" />
     <Compile Include="Utilities\Loggers.cs" />
     <Compile Include="World\Entities\Requests\Client\AuthsRequests.cs" />
     <Compile Include="World\Entities\Requests\Client\CharactersRequests.cs" />
