--- a/SunDofus/SunDofus.csproj
+++ b/SunDofus/SunDofus.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Utilities\Config.cs" />
     <Compile Include="Utilities\Formulas.cs" />
     <Compile Include="Utilities\Loggers.cs" />
+    <Compile Include="World\Entities\DatabaseEntity.cs" />
     <Compile Include="World\Entities\Requests\Client\AuthsRequests.cs" />
     <Compile Include="World\Entities\Requests\Client\CharactersRequests.cs" />
     <Compile Include="World\Entities\Requests\Client\ItemsRequests.cs" />
